--- a/TestAutoGeneratedAndNullable.csproj
+++ b/TestAutoGeneratedAndNullable.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
-        <LangVersion>8.0</LangVersion>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
         <Nullable>enable</Nullable>
         <NullableContextOptions>enable</NullableContextOptions>
     </PropertyGroup>
